--- a/css/modal.css
+++ b/css/modal.css
@@ -15,7 +15,7 @@
 /* Modal Content/Box */
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 10% auto; /* 15% from the top and centered */
     padding: 50px;
     border: 1px solid #888;
     width: 50%; /* Could be more or less, depending on screen size */
@@ -44,7 +44,7 @@
     cursor: pointer;
 }
 
-.game-over {
+#game-over {
   width: 100%;
   height: 100%;
 }
